--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-.square {
-    width: 200px;
-    height: 200px;
-    background-color: red;
+.blue-circle {
+    width: 100px;
+    height: 100px;
+    background:blue;
+    border-radius: 50px;
+  }
+  
+.red-square {
+    width: 100px;
+    height: 100px;
+    background: red;
+    
   }
