added hide functionality

--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 .blue-circle {
-    width: 100px;
-    height: 100px;
-    background:blue;
-    border-radius: 50px;
-  }
+  width: 100px;
+  height: 100px;
+  background:blue;
+  border-radius: 50px;
+}
   
 .red-square {
-    width: 100px;
-    height: 100px;
-    background: red;
-    
-  }
+  width: 100px;
+  height: 100px;
+  background: red;
+}
+
+.hide {
+  display: none;
+}
