--- a/sugar.css
+++ b/sugar.css
@@ -59,7 +59,10 @@ body {
     border-color: #1c75e2;
     color: #1c75e2;
 }
-
+.product_green{
+    border-color: rgb(8, 189, 159);
+    color: rgb(8, 189, 159);
+}
 .product__image img {
     max-width: 100%;
 }
@@ -75,6 +78,11 @@ body {
     margin: 0 0 20px;
 }
 
+.product_d{
+    font-size: 25px;
+    line-height: 40px;
+    line-height: 1;
+}
 @media screen and (max-width: 1200px) {
     .product-slider {
         width: 690px;
