--- a/css-examples/style.css
+++ b/css-examples/style.css
@@ -1,25 +1,48 @@
 
 
-#about {
-    justify-content: flex-end;
-    left: 50px;
+.about {
+    text-align: center;
+    left: 100px;
 }
-#blue-circle {
+.firstpage {
+    background-color: #F4F9E2;
+}
+/* #blue-circle {
     position: absolute;
     width: 1117px;
     height: 840px;
     left: 0px;
-    top: 0px; 
-}
-#header {
-    position: absolute;
-    width: 484px;
-    height: 150px;
-    left: 179px;
-    top: 27px; 
+    top: 0px;  */
+/* } */
+.theword {
+width: 484px;
+height: 27px;
+left: 179px;
+top: 27px;
+
+font-family: Larsseit;
+font-size: 24px;
+line-height: 27px;
+letter-spacing: -0.035em;
+color: #62D0DF;
+background-color: #F4F9E2;
 }
 
-#helpingyou {position: absolute;
+.contactus {
+    text-align: right;
+}
+.childhoodfoto {
+    background-image: url("imagesfor/zw-BIS6mJcA.jpg");
+    position: absolute;
+    background-color: rgba(68, 112, 196, 0.7);
+}
+
+
+.helpingyou {
+text-align: right;
+padding: 30px;
+margin: 20px;
+position: absolute;
 width: 484px;
 height: 167px;
 left: 179px;
@@ -31,13 +54,22 @@ line-height: 53px;
 letter-spacing: -0.035em;
 
 color: #22356F;
+background-color: #F4F9E2;
+}
+
+.higlytalented {
+    text-align: center;
+    justify-content: center;
+    top: 50px;
+    background-color: #F4F9E2;
 }
 
 .parent-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} 
+display: flex;
+align-items: center;
+justify-content: center;
+background-color:#F4F9E2; */
+}  
 .body {
     justify-content: center;
     align-items: center;
