--- a/css-examples/style.css
+++ b/css-examples/style.css
@@ -1,80 +1,34 @@
+.phrasetwo {
+	width: 555px;
+	height: 235px;
+	left: 179px;
+	top: 1600px;
 
+	font-family: Larsseit;
+	font-size: 24px;
+	line-height: 35px;
 
-.about {
-    text-align: center;
-    left: 100px;
+	color: #ffffff;
 }
-.firstpage {
-    background-color: #F4F9E2;
+.phraseone {
+	width: 223px;
+	height: 51px;
+	left: 179px;
+	top: 1400px;
+
+	font-family: Larsseit;
+	font-size: 36px;
+	line-height: 27px;
+	letter-spacing: -0.006em;
+
+	color: #ffffff;
 }
-/* #blue-circle {
-    position: absolute;
-    width: 1117px;
-    height: 840px;
-    left: 0px;
-    top: 0px;  */
-/* } */
-.theword {
-width: 484px;
-height: 27px;
-left: 179px;
-top: 27px;
-
-font-family: Larsseit;
-font-size: 24px;
-line-height: 27px;
-letter-spacing: -0.035em;
-color: #62D0DF;
-background-color: #F4F9E2;
-}
-
-.contactus {
-    text-align: right;
-}
-.childhoodfoto {
-    background-image: url("imagesfor/zw-BIS6mJcA.jpg");
-    position: absolute;
-    background-color: rgba(68, 112, 196, 0.7);
-}
-
-
-.helpingyou {
-text-align: right;
-padding: 30px;
-margin: 20px;
-position: absolute;
-width: 484px;
-height: 167px;
-left: 179px;
-top: 305px;
-
-font-family: Larsseit;
-font-size: 48px;
-line-height: 53px;
-letter-spacing: -0.035em;
-
-color: #22356F;
-background-color: #F4F9E2;
-}
-
-.higlytalented {
-    text-align: center;
-    justify-content: center;
-    top: 50px;
-    background-color: #F4F9E2;
-}
-
-.parent-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color:#F4F9E2;
-}  
 body {
-    background-color: #F4F9E2;
-}
+	/* position: relative; */
+	width: 1437px;
+	height: 607px;
+	left: 1px;
+	top: 842px;
 
-/* .wrapper {
-    max-width: 1060px;
-    margin: 0 auto; 
-} */
+	background: #62d0df;
+}
