--- a/css-examples/style.css
+++ b/css-examples/style.css
@@ -8,8 +8,8 @@
 .phrasetwo {
 	width: 555px;
 	height: 235px;
-	left: 179px;
-	top: 1600px;
+
+	margin-left: 178px;
 
 	font-family: Larsseit;
 	font-size: 24px;
@@ -20,8 +20,10 @@
 .phraseone {
 	width: 223px;
 	height: 51px;
-	left: 179px;
-	top: 1400px;
+
+	margin-top: 151px;
+	margin-left: 178px;
+	margin-bottom: 75px;
 
 	font-family: Larsseit;
 	font-size: 36px;
